--- a/views/index.pug
+++ b/views/index.pug
@@ -29,25 +29,25 @@ block body
                 h2 The Team
                 p Click to know the Who's Who of CompSoc.
                 p
-                    a.btn.btn-default(href="team.pug" role="button") View details &raquo;
+                    a.btn.btn-default(href="team" role="button") View details &raquo;
 
             div.col-md-3
                 h2 What's On
                 p Click to know what's happening in CompSoc, our past events and upcoming events.
                 p
-                    a.btn.btn-default(href="events.pug" role="button") View details &raquo;
+                    a.btn.btn-default(href="events" role="button") View details &raquo;
 
             div.col-md-3
                 h2 Our Sponsors
                 p They help us run smoothly and happily :) Click to know more.
                 p
-                    a.btn.btn-default(href="sponsors.pug" role="button") View details &raquo;
+                    a.btn.btn-default(href="sponsors" role="button") View details &raquo;
 
             div.col-md-3
                 h2 Say Hi To Us!
                 p Click to get in touch with us by email, social media or leave your valuable feedback and suggestions.
                 p
-                    a.btn.btn-default(href="contact.pug" role="button") View details &raquo;
+                    a.btn.btn-default(href="contact" role="button") View details &raquo;
 
     #hiredgrad-signup
 
