--- a/views/contact.pug
+++ b/views/contact.pug
@@ -7,28 +7,20 @@ block head
 
 block title
     h1 Say Hi To Us!
-    p Wanna join us? Welcome, with open arms :)
+    p 
     p Like Us? Have any valuable suggestions? We're all ears!
 
 block content
     //- row contains four columns, each with a description
-    div.row
-        div.col-md-3
-            h2 Join Us
-            p Whether you're a cyber genius or have never touched the keyboard, we welcome everyone.
-            form.form-group
-                input.form-control(type="text" placeholder="Name")
-                input.form-control(type="text" placeholder="Email")
-                input.form-control(type="text" placeholder="Password")
-                button.btn.btn-success(type="submit") Register
-        div.col-md-3
+    div.row    
+        div.col-md-4
             h2 Drop us a mail
-            p compsoc@durham.ac.uk
-        div.col-md-3
+            p computing.society@durham.ac.uk
+        div.col-md-4
             h2 We're social !
             p Like us on <a href = "https://www.facebook.com/DurhamCompsoc/?fref=ts">Facebook </a>
-            p Follow Us on Twitter
-        div.col-md-3
+            p Follow Us on <a href = "http://twitter.com/ducompsoc/">Twitter </a>
+        div.col-md-4
             h2 We value your opinion
             p Leave your comments/feedback/suggestions below.
             form.form-group
