--- a/views/events.pug
+++ b/views/events.pug
@@ -16,6 +16,23 @@ block content
         div.col-md-6
             h2 What We've Done!
             p Here's all events we've conducted in the past.
+            div.col-md-6
+                    div.row
+                        p
+                        a(href = "https://www.facebook.com/events/369911576674539/") BP Supply and Trading Event.
+                        p
+                        p The BP Supply and Trading Event on October 24, 2016 enlightened students about their graduate and placement roles.
+                    div.row
+                        p
+                        a(href = "https://www.facebook.com/events/1608529472702814/") ScottLogic Durham University Hackathon
+                        p
+                        p Hackathon organised by ScottLogic.
+
+                    div.row
+                        p
+                        a(href = "#") Dur(h).ac._k
+                        p
+                        p A talk by Joe Nash about hackathons.
 
         div.col-md-6
             h2 What Next?
