--- a/views/team.pug
+++ b/views/team.pug
@@ -13,13 +13,21 @@ block content
     div.row
         div.col-md-3
             h2 The President
+            img(src="./img/alistair.jpg" width=245 height=245)
+            p
             p Alistair Madden manages everything and ensures that Compsoc runs smoothly.
         div.col-md-3
             h2 The Secretary
+            img(src="#" width=245 height=245)
+            p
             p Mitchel Starkie takes care of all the sponsors, contracts and paperwork etc.
         div.col-md-3
             h2 The Treasurer
+            img(src="./img/sara.jpg" width=245 height=245)
+            p
             p Sara Chen looks after the financial matters of Compsoc.
         div.col-md-3
             h2 The Web Officer
+            img(src="./img/soumya.jpg" width=245 height=245)
+            p
             p Soumya Singh manages the website, the regular updates and the technical side of the society.
