--- a/views/about.pug
+++ b/views/about.pug
@@ -31,13 +31,13 @@ block content
 
                 div.carousel-inner(role="listbox")
                     div.item.active
-                        img(src="#" alt="img1" width="555" height="345")
+                        img(src="./img/Group_pic.jpg" alt="img1" width="555" height="345")
                     div.item
-                        img(src="#" alt="img2" width="555" height="345")
+                        img(src="./img/sl.jpg" alt="img2" width="555" height="345")
                     div.item
-                        img(src="#" alt="img3" width="555" height="345")
+                        img(src="./img/BPST.jpg" alt="img3" width="555" height="345")
                     div.item
-                        img(src="#" alt="img4" width="555" height="345")
+                        img(src="./img/Durhack3.jpg" alt="img4" width="555" height="345")
 
                     //left and right controls
 
