Added Mitchell's pic

--- a/views/team.pug
+++ b/views/team.pug
@@ -18,7 +18,7 @@ block content
             p Alistair Madden manages everything and ensures that Compsoc runs smoothly.
         div.col-md-3
             h2 The Secretary
-            img(src="#" width=245 height=245)
+            img(src="./img/mitchell.jpg" width=245 height=245)
             p
             p Mitchel Starkie takes care of all the sponsors, contracts and paperwork etc.
         div.col-md-3
