--- a/views/team.pug
+++ b/views/team.pug
@@ -31,3 +31,8 @@ block content
             img(src="./img/soumya.jpg" width=245 height=245)
             p
             p Soumya Singh manages the website, the regular updates and the technical side of the society.
+    div.row
+        div.col.md-12
+        h2 Design and Assets
+        p
+        p Molly Watkins designed our lovely banner and the society logo.
