--- a/views/contact.pug
+++ b/views/contact.pug
@@ -20,6 +20,7 @@ block content
             h2 We're social !
             p Like us on <a href = "https://www.facebook.com/DurhamCompsoc/?fref=ts">Facebook </a>
             p Follow Us on <a href = "http://twitter.com/ducompsoc/">Twitter </a>
+            p Join us on <a href = "https://ducompsoc.slack.com/">Slack</a>
         div.col-md-4
             h2 We value your opinion
             p Leave your comments/feedback/suggestions below.
