--- a/views/contact.pug
+++ b/views/contact.pug
@@ -18,9 +18,9 @@ block content
             p computing.society@durham.ac.uk
         div.col-md-4
             h2 We're social !
-            p Like us on <a href = "https://www.facebook.com/DurhamCompsoc/?fref=ts">Facebook </a>
-            p Follow Us on <a href = "http://twitter.com/ducompsoc/">Twitter </a>
-            p Join us on <a href = "https://ducompsoc.slack.com/">Slack</a>
+            p <img src="./img/fb.png" alt="Facebook" width="20" height="20"></img>  Like us on <a href = "https://www.facebook.com/DurhamCompsoc/?fref=ts">Facebook </a>
+            p <img src="./img/tw.png" alt="Twitter" width="20" height="20"></img>  Follow Us on <a href = "http://twitter.com/ducompsoc/">Twitter </a>
+            p <img src="./img/slack.png" alt="Slack" width="20" height="20"></img>  Join us on <a href = "https://ducompsoc.slack.com/">Slack</a>
         div.col-md-4
             h2 We value your opinion
             p Leave your comments/feedback/suggestions below.
