--- a/views/team.pug
+++ b/views/team.pug
@@ -11,6 +11,7 @@ block title
 
 block content
     div.row
+        h2 The Exec
         div.col-md-3
             h2 The President
             img(src="./img/alistair.jpg" width=245 height=245)
@@ -31,3 +32,12 @@ block content
             img(src="./img/soumya.jpg" width=245 height=245)
             p
             p Soumya Singh manages the website, the regular updates and the technical side of the society.
+            
+    div.row
+        h2 Contributors
+        div.col-md-12
+            h2 Design and Assets
+            p
+            p Molly Watkins designed our lovely banner and the society logo.
+            br
+            br
