--- a/views/sponsors.pug
+++ b/views/sponsors.pug
@@ -13,5 +13,8 @@ block content
     //- contains pictures of our sponsors which act as links to their official websites.
     div.row
         h2 Meet our sponsors
-        //add another row with appropriate number of columns acc to number of sponsors
-        //images of sponsors act as links to their websites
+        br
+        br
+        <img src="./img/sl_logo.png" width="250" height="250">
+        br
+        br
