--- a/public/indexStyle.css
+++ b/public/indexStyle.css
@@ -75,7 +75,7 @@ change background color of jumbotron
 **/
 
 .jumbotron {
-  background-color: #909090
+  background-color: #80dfff;
 }
 
 .footer {
