--- a/views/events.pug
+++ b/views/events.pug
@@ -19,6 +19,24 @@ block content
             div.col-md-6
                     div.row
                         p
+                        a(href="https://www.facebook.com/events/739676876179378/") MLH Local Hack Day
+                        p
+                        img(src = "./img/hackday.jpg" width="300" height="200")
+                        p We organized 12-hour long event for building, problem solving, coding and meeting new people on December 3, 2016 and that turned out to be a success :)
+                    div.row
+                        p
+                        a(href="https://www.facebook.com/events/1322032881161709/") Build-A-Chatbot!
+                        p
+                        <a href="#"><img src = "./img/buildachatbot.jpg" width="300" height="200"></a>
+                        p Build-A-Chatbot with Joe Nash, Program Manager at Github. Joe is a functional programmer and hacker with a passion for developer relations and community building, who joined us for a fun evening learning to build a Facebook chatbot.
+                    div.row
+                        p
+                        a(href="https://www.facebook.com/events/1890151881207928/") Introduction to Coding Workshop
+                        p
+                        <a href="https://www.facebook.com/events/1890151881207928/"><img src = "./img/edcode.jpg" width="300" height="200"></a>
+                        p We held the first session of a weekly Introduction to Coding Workshop in Collaboration with <a href="http://www.entrepreneursdurham.com/"> Entrepreneurs Durham </a> on November 29 to help people master the skills of web development!
+                    div.row
+                        p
                         a(href = "https://www.facebook.com/events/369911576674539/") BP Supply and Trading Event.
                         p
                         img(src = "./img/BPST.jpg" width="300" height="200")
@@ -34,28 +52,10 @@ block content
                         p
                         a(href = "https://www.facebook.com/events/234166873592041/") Dur(h).ac._k
                         p
-                        img(src = "./img/Group_pic.jpg" width="300" height="200")
+                        <a href="https://www.facebook.com/events/234166873592041/"><img src = "./img/Group_pic.jpg" width="300" height="200"></a>
                         p Joe Nash, working at Paypal talked to the students on March 2, 2016 about what hackathons are, how they are often misunderstood as attempts to break into systems, and how they are a brilliant opportunity to network with people from all parts of the world, develop new skills and an opportunity to land in a job as well! That's how Joe ended up working at PayPal. The students also got introduced to NodeJS.
 
         div.col-md-6
             h2 What Next?
             p Mark your calendars for the upcoming events!
             div.col-md-6
-                    div.row
-                        p
-                        a(href="https://www.facebook.com/events/1890151881207928/") Introduction to Coding Workshop
-                        p
-                        img(src = "./img/edcode.jpg" width="300" height="200")
-                        p We are glad to announce the first session of a weekly Introduction to Coding Workshop in Collaboration with <a href="http://www.entrepreneursdurham.com/"> Entrepreneurs Durham </a> on November 29. Don't miss this wonderful opportunity to master the skills of web development!
-                    div.row
-                        p
-                        a(href="https://www.facebook.com/events/1322032881161709/") Build-A-Chatbot!
-                        p
-                        img(src = "./img/chatbot.jpg" width="300" height="200")
-                        p Build-A-Chatbot with Joe Nash, Program Manager at Github. Joe is a functional programmer and hacker with a passion for developer relations and community building. Join us for a fun evening on December 1, 2016, 18:30 at CG60 and learn to build a Facebook chatbot, irrespective of your degree major and skill level.
-                    div.row
-                        p
-                        a(href="https://www.facebook.com/events/739676876179378/") MLH Local Hack Day
-                        p
-                        img(src = "./img/localhackday.png" width="300" height="200")
-                        p Be a part of the worldwide, 12-hour long event for building, problem solving, coding and meeting new people on December 3, 2016 at DSU.
