Added Durhack to events

--- a/views/events.pug
+++ b/views/events.pug
@@ -17,6 +17,14 @@ block content
             h2 What We've Done!
             p Here's all events we've conducted in the past.
             div.col-md-6
+                
+                    div.row
+                        p
+                        a(href="https://durhack.com") DurHack 2017
+                        p
+                        p Durham University had its first ever 24-hour Hacakthon sponsored by big names like Durham County Council, Github, MLH, Sunderland Software City, Durham Students Union, Entrepreneurs Durham, Waterstons, Barclays, Microsoft and Durham University.
+                        p With enormous data from in and around Durham, participants from various UK Universities utilized it to produce something that can potentially make a differemce to the region.
+                        p 24 hours of coding interspersed with workshops, games, VR, short sleep sprints and awesome food, the event was a massive success.
                     div.row
                         p
                         a(href="https://www.facebook.com/events/739676876179378/") MLH Local Hack Day
