--- a/views/templates/marginals.pug
+++ b/views/templates/marginals.pug
@@ -26,7 +26,7 @@ block body
         block body
         .push
     .footer
-        div &copy; 2016 Durham University CompSoc
+        div &copy; 2016-2017 Durham University CompSoc
         
 block scripts
     script(src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js")
