Update text about CompSoc

--- a/views/about.pug
+++ b/views/about.pug
@@ -13,11 +13,12 @@ block title
 block content
     div.row
         div.col-md-6
-            br
-            br
             p
-            p We’re Durham University’s Computing Society – run entirely by students. The university might be very old, but we’re young ! And we look for passionate problem solvers to come together, do stuff and participate in really cool hack-a-thons and tech-events all the year round.
-            p Click around to know more about us.
+                | CompSoc is Durham University’s Computing Society. It is a community run entirely by students and aims
+                | to promote and educate in all things technology. Established in 1998 the society has a long history.
+                | Today, we hold weekly meetings, workshops and hackathons for our members all year round.
+            p
+                | Browse through the site to find out more!
 
             //images carousel (next to the description)
 
