Update stylesheet naming to be consistent

--- a/views/sponsors.pug
+++ b/views/sponsors.pug
@@ -4,7 +4,7 @@ extends templates/standard.pug
 
 block head
     title Sponsors - DU CompSoc
-    link(href="/sponsors.css" rel="stylesheet")
+    link(href="/sponsorsStyle.css" rel="stylesheet")
 
 block title
     h1 Our Sponsors
