--- a/views/contact.pug
+++ b/views/contact.pug
@@ -6,20 +6,21 @@ block head
 
 block title
     h1 Say Hi To Us!
-    p 
+    p
     p Like Us? Have any valuable suggestions? We're all ears!
 
 block content
     //- row contains four columns, each with a description
-    div.row    
+    div.row
         div.col-md-4
             h2 Drop us a mail
             p computing.society@durham.ac.uk
         div.col-md-4
             h2 We're social !
-            p <img src="./img/fb.png" alt="Facebook" width="20" height="20"></img>  Like us on <a href = "https://www.facebook.com/DurhamCompsoc/?fref=ts">Facebook </a>
-            p <img src="./img/tw.png" alt="Twitter" width="20" height="20"></img>  Follow Us on <a href = "http://twitter.com/ducompsoc/">Twitter </a>
-            p <img src="./img/slack.png" alt="Slack" width="20" height="20"></img>  Join us on <a href = "https://ducompsoc.slack.com/">Slack</a>
+            p <i class="fa fa-facebook-official" aria-hidden="true"></i>  Like us on <a href = "https://www.facebook.com/DurhamCompsoc/?fref=ts">Facebook </a>
+            p <i class="fa fa-twitter" aria-hidden="true"></i>  Follow Us on <a href = "http://twitter.com/ducompsoc/">Twitter </a>
+            p <i class="fa fa-slack" aria-hidden="true"></i>  Join us on <a href = "https://ducompsoc.slack.com/">Slack</a>
+            p <i class="fa fa-linkedin-square" aria-hidden="true"></i> Connect with us on <a href = "https://linkedin.com/company/ducompsoc">LinkedIn </a>
         div.col-md-4
             h2 We value your opinion
             p Leave your comments/feedback/suggestions below.
