change page title to Our Sponsors & Partners

--- a/views/sponsors.pug
+++ b/views/sponsors.pug
@@ -7,7 +7,7 @@ block head
     link(href="/sponsorsStyle.css" rel="stylesheet")
 
 block title
-    h1 Our Sponsors
+    h1 Our Sponsors & Partners
     p Here's a big thank you to all who help us grow :)
 
 block content
