Collapsible panels on team page

--- a/views/team.pug
+++ b/views/team.pug
@@ -12,26 +12,122 @@ block title
 block content
     div.row
         h2 The Exec
-        div.col-md-3
-            h2 The President
-            img(src="./img/alistair.jpg" width=245 height=245)
+        div.col-md-1
+
+        div.col-md-2
+            h3 President
             p
-            p Alistair Madden manages everything and ensures that Compsoc runs smoothly.
-        div.col-md-3
-            h2 The Secretary
-            img(src="./img/mitchell.png" width=245 height=245)
+            p Manages everything and ensures that CompSoc runs smoothly.
+        div.col-md-2
+            h3 Secretary
             p
-            p Mitchel Starkie takes care of all the sponsors, contracts and paperwork etc.
-        div.col-md-3
-            h2 The Treasurer
-            img(src="./img/sara.jpg" width=245 height=245)
+            p Takes care of sponsors, contracts, paperwork etc.
+        div.col-md-2
+            h3 Treasurer
             p
-            p Sara Chen looks after the financial matters of Compsoc.
-        div.col-md-3
-            h2 The Web Officer
-            img(src="./img/soumya.jpg" width=245 height=245)
+            p Handles the financial matters of CompSoc.
+        div.col-md-2
+            h3 Web Officer
             p
-            p Soumya Singh manages the website, the regular updates and the technical side of the society.
+            p Manages the website, the regular updates and the technical side of the society.
+        div.col-md-2
+            h3 Social Sec
+            p
+            p Organizes socials and events.
+        div.col-md-1
+    br
+    div.row
+        div.panel-group
+            div.panel.panel-default
+                div.panel-heading
+                    h3
+                        a(data-toggle="collapse" href="#ex78") 2017/18
+                #ex78.panel-collapse.collapse
+                    div.panel-body
+                        div.row
+                            div.col-md-3
+                                h2 President
+                                    img(src="./img/mitchell.png" width=245 height=245)
+                                    p
+                                    p Robbie Jakob-Whitworth
+                            div.col-md-3
+                                h2 Secretary
+                                    img(src="./img/mitchell.png" width=245 height=245)
+                                    p
+                                    p Vivek Mehta
+                            div.col-md-3
+                                h2 Treasurer
+                                    img(src="./img/mitchell.png" width=245 height=245)
+                                    p
+                                    p Tom O'Leary
+                            div.col-md-3
+                                h2 Web Officer
+                                    img(src="./img/mitchell.png" width=245 height=245)
+                                    p
+                                    p Soumya Singh
+                        div.row
+                            div.col-md-3
+                                h2 Social Secretary
+                                    img(src="./img/mitchell.png" width=245 height=245)
+                                    p
+                                    p Ryota Sakai
+                            div.col-md-9
+
+        div.panel-group
+            div.panel.panel-default
+                div.panel-heading
+                    h3
+                        a(data-toggle="collapse" href="#ex67") 2016/17
+                #ex67.panel-collapse.collapse
+                    div.panel-body
+                        div.col-md-3
+                            h2 President
+                                img(src="./img/alistair.jpg" width=245 height=245)
+                                p
+                                p Alistair Madden
+                        div.col-md-3
+                            h2 Secretary
+                                img(src="./img/mitchell.png" width=245 height=245)
+                                p
+                                p Mitchel Starkie
+                        div.col-md-3
+                            h2 Treasurer
+                                img(src="./img/sara.jpg" width=245 height=245)
+                                p
+                                p Sara Chen
+                        div.col-md-3
+                            h2 Web Officer
+                                img(src="./img/soumya.jpg" width=245 height=245)
+                                p
+                                p Soumya Singh
+
+        div.panel-group
+            div.panel.panel-default
+                div.panel-heading
+                    h3
+                        a(data-toggle="collapse" href="#ex56") 2015/16
+                #ex56.panel-collapse.collapse
+                    div.panel-body
+                        div.col-md-3
+                            h2 President
+                                img(src="./img/alistair.jpg" width=245 height=245)
+                                p
+                                p Alistair Madden
+                        div.col-md-3
+                            h2 Secretary
+                                img(src="./img/mitchell.png" width=245 height=245)
+                                p
+                                p Name Surname
+                        div.col-md-3
+                            h2 Treasurer
+                                img(src="./img/mitchell.png" width=245 height=245)
+                                p
+                                p Name Surname
+                        div.col-md-3
+                            h2 Web Officer
+                                img(src="./img/mitchell.png" width=245 height=245)
+                                p
+                                p Ram Gupta
 
     div.row
         h2 Contributors
