--- a/views/contact.pug
+++ b/views/contact.pug
@@ -10,7 +10,7 @@ block title
     p Like Us? Have any valuable suggestions? We're all ears!
 
 block content
-    //- row contains four columns, each with a description
+    //- row contains two columns, each with the content
     div.row
         div.col-md-6
             h2 We're social !
@@ -27,8 +27,29 @@ block content
         div.col-md-6
             h2 Drop Us a Message
             p Leave your queries/comments/feedback/suggestions below.
-            form.form-group
-                input.form-control(type="text" placeholder="Name")
-                input.form-control(type="text" placeholder="Email")
-                input.form-control(type="text" placeholder="Message")
+            form.form-group(action="contactform.php" method="POST")
+                div.input-group
+                    span.input-group-addon
+                        i.fa.fa-user
+                    input.form-control(type="text" placeholder="Name" name="realname" id="realname")
+                br
+
+                div.input-group
+                    span.input-group-addon
+                        i.fa.fa-at
+                    input.form-control(type="email" placeholder="Email" name="email" id="email")
+
+                br
+                div.input-group
+                    span.input-group-addon
+                        i.fa.fa-pencil
+                    input.form-control(type="text" placeholder="Message Title/Subject" name="subject" id="subject")
+
+                br
+                div.input-group
+                    span.input-group-addon
+                        i.fa.fa-envelope
+                    textarea.form-control(rows="5" id="msgbody" name="msgbody" placeholder="Your Message")
+
+                br
                 button.btn.btn-success(type="submit") Submit
