--- a/views/templates/standard.pug
+++ b/views/templates/standard.pug
@@ -1,9 +1,11 @@
 extends marginals.pug
     
-block body
-    div.jumbotron
-        div.container
-            block title
+block content
+    .wrapper
+        div.jumbotron
+            div.container
+                block title
 
-    div.container
-        block content
+        div.container
+            block content
+    .push
