--- a/views/templates/base.pug
+++ b/views/templates/base.pug
@@ -12,5 +12,9 @@ html(lang="en")
         link(href="/indexStyle.css" rel="stylesheet")
         link(href="https://fonts.googleapis.com/css?family=Jura:400,600|Raleway:400,600" rel="stylesheet")
     body
-        block body
+        block nav
+        block content
+        block footer
+            .footer
+                div &copy; 2016-2017 Durham University CompSoc
         block scripts
