The social media icons get their original color on hovering, will fix for slack later

--- a/public/indexStyle.css
+++ b/public/indexStyle.css
@@ -111,3 +111,8 @@ img {
 .hiredGradButton {
     text-align: center;
 }
+
+.fa-facebook-official:hover{color: #3b5998;}
+.fa-linkedin-square:hover{color: #0077b5;}
+.fa-twitter:hover{color: #1da1f2;}
+.fa-slack:hover{color: grey;}
