Modularise the links at bottom of page
The links are used on both homepage and about pages so it makes sense to have them as a module (mixin) in pug. At a later point, may want to decide if these will be on all pages in which case they should be worked into one of the templates.

--- a/views/index.pug
+++ b/views/index.pug
@@ -2,6 +2,7 @@
    Created by Alistair on 28/08/2016.
 
 extends templates/marginals.pug
+include ./quickLinks.pug
 
 block head
     title Homepage - DU CompSoc
@@ -23,42 +24,7 @@ block content
                     h3.hiredGradButton
                         a.btn.btn-success(href="#hiredGradSignUpModal" data-toggle="modal" role="button") Join Now!
 
-
-        div.container
-            //- Example row of columns
-            div.row
-                div.col-md-3
-                    h2 The Team
-                    p Click to know the Who's Who of CompSoc.
-                    a.btn.btn-default.homepage-btn-vertical(href="team" role="button") View details &raquo;
-
-                div.col-md-3
-                    h2 What's On
-                    p Click to know what's happening in CompSoc, our past events and upcoming events.
-                    a.btn.btn-default.homepage-btn-vertical(href="events" role="button") View details &raquo;
-
-                div.col-md-3
-                    h2 Our Sponsors
-                    p They help us run smoothly and happily :) Click to know more.
-                    a.btn.btn-default.homepage-btn-vertical(href="sponsors" role="button") View details &raquo;
-
-                div.col-md-3
-                    h2 Say Hi To Us!
-                    p Click to get in touch with us by email, social media or leave your valuable feedback and suggestions.
-                    a.btn.btn-default.homepage-btn-vertical(href="contact" role="button") View details &raquo;
-
-            .row.btn-container
-                .col-md-3
-                    a.btn.btn-default.homepage-btn-horizontal(href="team" role="button") View details &raquo;
-
-                .col-md-3
-                    a.btn.btn-default.homepage-btn-horizontal(href="team" role="button") View details &raquo;
-
-                .col-md-3
-                    a.btn.btn-default.homepage-btn-horizontal(href="team" role="button") View details &raquo;
-
-                .col-md-3
-                    a.btn.btn-default.homepage-btn-horizontal(href="team" role="button") View details &raquo;
+        +quickLinks
 
         #hiredgrad-signup
 
