--- a/views/about.pug
+++ b/views/about.pug
@@ -2,6 +2,7 @@
 //- created by Soumya on 30-08-2016
 
 extends layouts/banner-content.pug
+include ./quickLinks.pug
 
 block head
     title About - DUCompSoc
@@ -50,24 +51,4 @@ block content
                         span.glyphicon.glyphicon-chevron-right(aria-hidden="true")
                         span.sr-only Next
     div.row
-        .container
-            div.col-md-3
-                h2 The Team
-                p Click to know the Who's Who of CompSoc.
-                p
-                    a.btn.btn-default(href="team" role="button") View details &raquo;
-            div.col-md-3
-                h2 What's On
-                p Click to know what's happening in CompSoc, our past events and upcoming events.
-                p
-                    a.btn.btn-default(href="events" role="button") View details &raquo;
-            div.col-md-3
-                h2 Our Sponsors
-                p They help us run smoothly and happily :) Click to know more.
-                p
-                    a.btn.btn-default(href="sponsors" role="button") View details &raquo;
-            div.col-md-3
-                h2 Say Hi To Us!
-                p  Click to get in touch with us by email, social media or leave your valuable feedback and suggestions.
-                p
-                    a.btn.btn-default(href="contact" role="button") View details &raquo;
+        +quickLinks
